transformer/RDDToDSGrammar.cpp
#include <vector>
#include <cstring>
#include <cstdlib>
#include "RDDToDSGrammar.h"
#include "Token.h"
#include "Util.h"
#include <iostream>

/** see the Google doc for the full grammar definition */

/**
 * This is the entry point of the grammar.
 * Production:
 * <program> --> <context> <dataset> <chainordone>
 *               [FIRST_PLUS = { sc }]
 *             | EOF
 *               [FIRST_PLUS = { EOF }]
 */
bool RDDToDSGrammar::program()
{
	// if context, dataset, chainable, and done are found
	if (context()
		&& dataset()
		&& chainordone())
	{
		// make sure that all tokens have been used
		if (!parse->curToken()) // if there is no current token
		{
			return true;
		}
	}
	return false;
}

/**
 * Production:
 * <context> --> sc
 *               [FIRST_PLUS = { sc }]
 *
 * This transforms "sc" to "spark" in the output file.
 */
bool RDDToDSGrammar::context()
{
	// if sc is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "sc"))
	{
		*outFile << "spark"; // print the transformation to the output file
		parse->nextToken();
		return true;
	}
	return false;
}

/**
 * Production:
 * <dataset> --> . <dataset0>
 *               [FIRST_PLUS = { . }]
 */
bool RDDToDSGrammar::dataset()
{
	// if a period is found
	if (parse->curToken()
		&& parse->curToken()->getSymType() == Token::SYMTYPE_PERIOD)
	{
		*outFile << parse->curToken()->getTokenName(); // print it to the output file
		parse->nextToken();
		// if dataset0 is found
		if (dataset0())
		{
			return true;
		}
	}
	return false;
}

/**
 * Production:
 * <dataset0> --> <range>
 *                [FIRST_PLUS = { range }]
 *              | <textFile>
 *                [FIRST_PLUS = { textFile }]
 */
bool RDDToDSGrammar::dataset0()
{
	// if the range keyword is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "range"))
	{
		if (range())
		{
			return true;
		}
	}
	// else if the textFile keyword is found
	else if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "textFile"))
	{
		if (textFile())
		{
			return true;
		}
	}
	return false;
}

/**
 * Production:
 * <range> --> range ( <number> , <number> )
 *             [FIRST_PLUS = { range }]
 */
bool RDDToDSGrammar::range()
{
	// if the range keyword is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "range"))
	{
		*outFile << parse->curToken()->getTokenName(); // print it to the output file
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			*outFile << parse->curToken()->getTokenName(); // print it to the output file
			// if a number is found
			if (parse->nextToken()
				&& parse->curToken()->getID() == Token::IDTYPE_NUMBER)
			{
				*outFile << parse->curToken()->getTokenName(); // print it to the output file
				// if a comma is found
				if (parse->nextToken()
					&& parse->curToken()->getSymType() == Token::SYMTYPE_COMMA)
				{
					*outFile << parse->curToken()->getTokenName(); // print it to the output file
					// if a number is found
					if (parse->nextToken()
						&& parse->curToken()->getID() == Token::IDTYPE_NUMBER)
					{
						*outFile << parse->curToken()->getTokenName(); // print it to the output file
						// if a right parenthesis is found
						if (parse->nextToken()
							&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
						{
							*outFile << parse->curToken()->getTokenName() << std::endl; // print it and a newline to the output file
							parse->nextToken();
							return true;
						}
					}
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <textFile> --> textFile ( <string> )
 *                [FIRST_PLUS = { textFile }]
 *
 * This transforms "textFile" to "read.textFile" in the output file.
 */
bool RDDToDSGrammar::textFile()
{
	// if the textFile keyword is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "textFile"))
	{
		*outFile << "read.textFile"; // print the transformation to the output file
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			*outFile << parse->curToken()->getTokenName(); // print it to the output file
			// if a string is found
			if (parse->nextToken()
				&& parse->curToken()->getID() == Token::IDTYPE_STRING)
			{
				*outFile << parse->curToken()->getTokenName(); // print it to the output file
				// if a right parenthesis is found
				if (parse->nextToken()
					&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
				{
					*outFile << parse->curToken()->getTokenName() << std::endl; // print it and a newline to the output file
					parse->nextToken();
					return true;
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <chainordone> --> . <chainordone0>
 *                   [FIRST_PLUS = { . }]
 */
bool RDDToDSGrammar::chainordone()
{
	// if a period is found
    if (parse->curToken()
        && parse->curToken()->getSymType() == Token::SYMTYPE_PERIOD)
    {
        std::cout << "chainordone\n";
        *outFile << parse->curToken()->getTokenName(); // print it to the output file
        parse->nextToken();
        // if chainordone0 is found
        if (chainordone0())
        {   
            return true;
        }
    }
    else if(parse->curToken()
        && !(parse->curToken()->getSymType() == Token::SYMTYPE_PERIOD))
    {
        if(chainordone0()){
            return true;
        }
    }
    std::cout << "false chainordone\n";
    return false;
}

/**
 * Production:
 * <chainordone0> --> <chainable>
 *                    [FIRST_PLUS = { map, filter, sortBy }]
 *                  | <done>
 *                    [FIRST_PLUS = { reduce, reduceByKey, collect }]
 */
bool RDDToDSGrammar::chainordone0()
{
	// if the map, filter, or sortBy keywords are found
    if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && (!strcmp(parse->curToken()->getTokenName().c_str(), "map")
        || !strcmp(parse->curToken()->getTokenName().c_str(), "filter")
        || !strcmp(parse->curToken()->getTokenName().c_str(), "sortBy"))
        || !strcmp(parse->curToken()->getTokenName().c_str(), "reduceByKey")
        )
    {
        if (chainable())
        {
            return true;
        }
    }
    // else if the reduce, reduceByKey, or collect keywords are found
    else if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && (!strcmp(parse->curToken()->getTokenName().c_str(), "reduce")
        || !strcmp(parse->curToken()->getTokenName().c_str(), "collect")))
    {
        if (done())
        {
            return true;
        }
    }
    return false;
}

/**
 * Production:
 * <chainable> --> <map> <chainordone>
 *                 [FIRST_PLUS = { map }]
 *               | <filter> <chainordone>
 *                 [FIRST_PLUS = { filter }]
 *               | <sort> <chainordone>
 *                 [FIRST_PLUS = { sortBy }]
 */
bool RDDToDSGrammar::chainable()
{// if the map keyword is found
    if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && !strcmp(parse->curToken()->getTokenName().c_str(), "map"))
    {
        if (map()
            && chainordone())
        {
            return true;
        }
    }
    // else if the filter keyword is found
    else if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && !strcmp(parse->curToken()->getTokenName().c_str(), "filter"))
    {
        if (filter()
            && chainordone())
        {
            return true;
        }
    }
    // else if the sortBy keyword is found
    else if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && !strcmp(parse->curToken()->getTokenName().c_str(), "sortBy"))
    {
        if (sort()
            && chainordone())
        {
            return true;
        }
    }
    else if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && !strcmp(parse->curToken()->getTokenName().c_str(), "reduceByKey"))
    {
        if (reduce()
            && chainordone())
        {
            return true;
        }
    }

    return false;
}

/**
 * Production:
 * <map> --> map ( <mapUDF> )
 *           [FIRST_PLUS = { map }]
 */
bool RDDToDSGrammar::map()
{
	// if the map keyword is found
    if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && !strcmp(parse->curToken()->getTokenName().c_str(), "map"))
    {
        
        *outFile << parse->curToken()->getTokenName(); // print it to the output file
        // if a left parenthesis is found
        if (parse->nextToken()
            && parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
        {
            *outFile << parse->curToken()->getTokenName(); // print it to the output file
            std::string userFunction;
            // if a mapUDF is found
            if (parse->nextToken())
            {    
                if (mapUDF(userFunction)) 
                {
                    *outFile << userFunction; // print it to the output file
                    // if a right parenthesis is found
                    if (parse->curToken()
                        && parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
                    {
                        *outFile << parse->curToken()->getTokenName() << std::endl; // print it and a newline to the output file
                        parse->nextToken();
                        return true;
                    }
                }
                else 
                {
                    *outFile << userFunction;
                    return true;
                }
            }
        }
    }
    
    return false;
}


/**
 * Production:
 * <filter> --> filter ( <filterUDF> )
 *              [FIRST_PLUS = { filter }]
 */
bool RDDToDSGrammar::filter()
{
	// if the filter keyword is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "filter"))
	{
		*outFile << parse->curToken()->getTokenName(); // print it to the output file
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			*outFile << parse->curToken()->getTokenName(); // print it to the output file
			std::string userFunction;
			// if a filter UDF is found
			if (parse->nextToken()
				&& filterUDF(userFunction))
			{
				*outFile << userFunction; // print it to the output file
				// if a right parenthesis is found
				if (parse->curToken()
					&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
				{
					*outFile << parse->curToken()->getTokenName() << std::endl; // print it and a newline to the output file
					parse->nextToken();
					return true;
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <sort> --> sortBy ( <sortByUDF> )
 *           [FIRST_PLUS = { sortBy }]
 *
 * This transforms "sortBy(<func>)" to "map(row=>((<func>)(row), row)).orderBy("_1").map(_._2)" in the output file.
 */
bool RDDToDSGrammar::sort()
{
	// if the sortBy keyword is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "sortBy"))
	{
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			std::string userFunction;
			// if a sortBy UDF is found
			if (parse->nextToken()
				&& sortByUDF(userFunction))
			{
				// if a right parenthesis is found
				if (parse->curToken()
					&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
				{
					*outFile << "map(row=>((" << userFunction << ")(row), row)).orderBy(\"_1\").map(_._2)" << std::endl; // print the transformation to the output file
					parse->nextToken();
					return true;
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <done> --> <reduce>
 *            [FIRST_PLUS = { reduce, reduceByKey }]
 *          | <collect>
 *            [FIRST_PLUS = { collect }]
 */
bool RDDToDSGrammar::done()
{
	if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && (!strcmp(parse->curToken()->getTokenName().c_str(), "reduce"))
        )
    {
        if (reduce())
        {
            return true;
        }
    }
    else if (parse->curToken()
        && parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
        && !strcmp(parse->curToken()->getTokenName().c_str(), "collect"))
    {
        if (collect())
        {
            return true;
        }
    }
    return false;
}

/**
 * Production:
 * <reduce> --> reduce ( <reduceUDF> )
 *              [FIRST_PLUS = { reduce }]
 *            | reduceByKey ( <reduceUDF> )
 *              [FIRST_PLUS = { reduceByKey }]
 * This transforms "reduce(<func>)" to "select(reduceAggregator(<func>)).collect()" in the output file.
 * This transforms "reduceByKey(<func>)" to "groupByKey(_._1).agg(reduceByKeyAggregator(<func>))" in the output file.
 */
bool RDDToDSGrammar::reduce()
{
	// if the reduce keyword is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "reduce"))
	{
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			std::string userFunction;
			// if a reduce UDF is found
			if (parse->nextToken()
				&& reduceUDF(userFunction))
			{
				// if a right parenthesis is found
				if (parse->curToken()
					&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
				{
					*outFile << "select(reduceAggregator(" << userFunction << ")).collect()" << std::endl; // print the transformation to the output file
					parse->nextToken();
					return true;
				}
			}
		}
	}
	// else if the reduceByKey keyword is found
	else if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "reduceByKey"))
	{
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			std::string userFunction;
			// if a reduce UDF is found
			if (parse->nextToken()
				&& reduceUDF(userFunction))
			{
				// if a right parenthesis is found
				if (parse->curToken()
					&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
				{
					*outFile << "groupByKey(_._1).agg(reduceByKeyAggregator(" << userFunction << "))" << std::endl; // print the transformation to the output file
					parse->nextToken();
					return true;
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <collect> --> collect ( )
 *              [FIRST_PLUS = { collect }]
 */
bool RDDToDSGrammar::collect()
{
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_RESERVEDWORD
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "collect"))
	{
		*outFile << parse->curToken()->getTokenName(); // print it to the output file
		// if a left parenthesis is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
		{
			*outFile << parse->curToken()->getTokenName(); // print it to the output file
			// if a right parenthesis is found
			if (parse->nextToken()
				&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
			{
				*outFile << parse->curToken()->getTokenName() << std::endl; // print it and a newline to the output file
				parse->nextToken();
				return true;
			}
		}
	}
	return false;
}

/**
 * Production:
 * <mapUDF> --> <id> => <exprTupleBlock>
 *              [FIRST_PLUS = { <id> }]
 */
bool RDDToDSGrammar::mapUDF(std::string &udfString)
{
	// if an identifier is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER)
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if an arrow is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_ARROW)
		{
			udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
			// if an expression tuple block is found
			if (parse->nextToken()
				&& (parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_BRACE
				|| parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS
				|| parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER
				|| parse->curToken()->getID() == Token::IDTYPE_NUMBER
				|| !strcmp(parse->curToken()->getTokenName().c_str(), "if"))
				&& exprTupleBlock(udfString))
			{
				return true;
			}
		}
	}
	
  return false;
}

/**
 * Production:
 * <exprTupleBlock> --> { <assignThenExprTuple> }
 *                      [FIRST_PLUS = { { }]
 *                    | <exprTuple>
 *                      [FIRST_PLUS = { <id>, <number>, (, if }]
 */
bool RDDToDSGrammar::exprTupleBlock(std::string &udfString)
{
	// if a left curly brace is found
	if (parse->curToken()
		&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_BRACE)
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if assignments or statements are found
		if (parse->nextToken()
			&& assignThenExprTuple(udfString))
		{
			// if a right curly brace is found
			if (parse->curToken()
				&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_BRACE)
			{
				udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
				parse->nextToken();
				return true;
			}
		}
	}
	// else if an expression or tuple is found
	else if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS
		|| parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER
		|| parse->curToken()->getID() == Token::IDTYPE_NUMBER
		|| !strcmp(parse->curToken()->getTokenName().c_str(), "if"))
		&& exprTuple(udfString))
	{
		return true;
	}
	return false;
}

/**
 * Production:
 * <assignThenExprTuple> --> <assignment> <assignThenExprTuple>
 *                           [FIRST_PLUS = { val }]
 *                         | <exprTuple>
 *                           [FIRST_PLUS = { <id>, <number>, (, if }]
 */
bool RDDToDSGrammar::assignThenExprTuple(std::string &udfString)
{
	// *outFile << "<<<<<<622>>>>>>" << parse->curToken()->getTokenName();
	// *outFile << "<<<<<<622 CUR STRING>>>>>>" << udfString << std::endl;
	// if an assignment is found
	if (parse->curToken()
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "val")
		&& assignment(udfString))
	{
		// if assignments or expression or tuple are found
		if (parse->curToken()
			&& assignThenExprTuple(udfString))
		{
			return true;
		}
	}
	// else if an expression or tuple is found
	else if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS
		|| parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER
		|| parse->curToken()->getID() == Token::IDTYPE_NUMBER
		|| !strcmp(parse->curToken()->getTokenName().c_str(), "if"))
		&& exprTuple(udfString))
	{
		// *outFile << "<<<<<<639>>>>>>" << parse->curToken()->getTokenName();
		// *outFile << "<<<<<<639 CUR STRING>>>>>>" << udfString << std::endl;
		return true;
	}
	return false;
}

/**
 * Production:
 * <assignment> --> val <identifier> = <expression> ;
 *                  [FIRST_PLUS = { val }]
 */
bool RDDToDSGrammar::assignment(std::string &udfString)
{
	// if the val keyword is found
	if (parse->curToken()
		&& !strcmp(parse->curToken()->getTokenName().c_str(), "val"))
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if an identifier is found
		if (parse->nextToken()
			&& parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER)
		{
			udfString.append(" "); // add a space to the string that's being constructed
			udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
			// if an equal sign is found
			if (parse->nextToken()
				&& parse->curToken()->getSymType() == Token::SYMTYPE_EQUAL)
			{
				udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
				// if an expression is found
				if (parse->nextToken()
					&& expression(udfString))
				{
					// if a semicolon is found
					if (parse->curToken()
						&& parse->curToken()->getSymType() == Token::SYMTYPE_SEMICOLON)
					{
						udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
						parse->nextToken();
						//*outFile << "<<<<<<LINE 697>>>>>>" << parse->curToken()->getTokenName();
						return true;
					}
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <exprTuple> --> <noParenExpr>
 *                 [FIRST_PLUS = { <identifier>, <number>, if }]
 *               | ( <expression> <parenExprOrTuple>
 *                 [FIRST_PLUS = { ( }]
 */
bool RDDToDSGrammar::exprTuple(std::string &udfString)
{
	// if a no paren expression is found
	if (parse->curToken()
		&& (parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER
		|| parse->curToken()->getID() == Token::IDTYPE_NUMBER
		|| !strcmp(parse->curToken()->getTokenName().c_str(), "if"))
		&& noParenExpr(udfString))
	{
		return true;
	}
	// else if a left parenthesis is found
	else if (parse->curToken()
		&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS)
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if an expression is found
		if (parse->nextToken()
			&& expression(udfString))
		{
			// if a right paren expression or tuple is found
			if (parenExprOrTuple(udfString))
			{
				return true;
			}
		}
	}
	// *outFile << "<<<<<<FALSE 741>>>>>>" << parse->curToken()->getTokenName();
	// *outFile << "<<<<<<ERROR>>>>>>" << udfString;
	return false;
}

/**
 * Production:
 * <parenExprOrTuple> --> <rightParenExpr>
 *                        [FIRST_PLUS = { ) }]
 *                      | <tuple>
 *                        [FIRST_PLUS = { , }]
 */
bool RDDToDSGrammar::parenExprOrTuple(std::string &udfString)
{
	// if a right paren expression is found
	if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS)
		&& rightParenExpr(udfString))
	{
		return true;
	}
	// else if a tuple is found
	else if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_COMMA)
		&& tuple(udfString))
	{
		return true;
	}
	return false;
}

/**
 * Production:
 * <tuple> --> , <expression> <tuple0> )
 *             [FIRST_PLUS = { , }]
 */
bool RDDToDSGrammar::tuple(std::string &udfString)
{
	// if a comma is found
	if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_COMMA))
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if an expression is found
		if (parse->nextToken()
			&& expression(udfString))
		{
			// if a tuple0 is found
			if (parse->curToken()
				&& tuple0(udfString))
			{
				// if a right parenthesis is found
				if (parse->curToken()
					&& (parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS))
				{
					udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
					parse->nextToken();
					return true;
				}
			}
		}
	}
	return false;
}

/**
 * Production:
 * <tuple0> --> , <expression> <tuple0>
 *              [FIRST_PLUS = { , }]
 *            | EPSILON
 *              [FIRST_PLUS = { ) }]
 */
bool RDDToDSGrammar::tuple0(std::string &udfString)
{
	// if a comma is found
	if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_COMMA))
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if an expression is found
		if (parse->nextToken()
			&& expression(udfString))
		{
			// if a tuple0 is found
			if (tuple0(udfString))
			{
				return true;
			}
		}
	}
	// else if a right parenthesis is found
	else if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_PARENTHESIS))
	{
		return true;
	}
	return false;
}

/**
 * Production:
 * <filterUDF> --> <id> => <boolExprBlock>
 *                 [FIRST_PLUS = { <id> }]
 */
bool RDDToDSGrammar::filterUDF(std::string &udfString)
{
	// if an identifier is found
	if (parse->curToken()
		&& parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER)
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if an arrow is found
		if (parse->nextToken()
			&& parse->curToken()->getSymType() == Token::SYMTYPE_ARROW)
		{
			udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
			// if a boolean expression block is found
			if (parse->nextToken()
				&& (parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_BRACE
				|| parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS
				|| parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER
				|| parse->curToken()->getID() == Token::IDTYPE_NUMBER
				|| !strcmp(parse->curToken()->getTokenName().c_str(), "if"))
				&& boolExprBlock(udfString))
			{
				return true;
			}
		}
	}
	*outFile << std::endl << "<<<<<<ERROR>>>>>>" << udfString << std::endl;
  return false;
}

/**
 * Production:
 * <boolExprBlock> --> { <assignThenBoolExpr> }
 *                     [FIRST_PLUS = { { }]
 *                   | <boolExpr>
 *                     [FIRST_PLUS = { <id>, <number>, (, if }]
 */
bool RDDToDSGrammar::boolExprBlock(std::string &udfString)
{
	// if a left curly brace is found
	if (parse->curToken()
		&& parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_BRACE)
	{
		udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
		// if assignments or a boolean expression are found
		if (parse->nextToken()
			&& assignThenBoolExpr(udfString))
		{
			// if a right curly brace is found
			if (parse->curToken()
				&& parse->curToken()->getSymType() == Token::SYMTYPE_RIGHT_BRACE)
			{
				udfString.append(parse->curToken()->getTokenName()); // add it to the string that's being constructed
				parse->nextToken();
				return true;
			}
		}
	}
	// else if a boolean expression is found
	else if (parse->curToken()
		&& (parse->curToken()->getSymType() == Token::SYMTYPE_LEFT_PARENTHESIS
		|| parse->curToken()->getID() == Token::IDTYPE_IDENTIFIER
		|| parse->curToken()->getID() == Token::IDTYPE_NUMBER
		|| !strcmp(parse->curToken()->getTokenName().c_str(), "if"))
		&& boolExpr(udfString))
	{
		return true;
	}
	return false;
}

/**
 * Production:
 * <assignThenBoolExpr> --> <assignment> <assignThenBoolExpr>
